[package]
name = "hashring"
version = "0.3.0"
authors = ["Jerome Froelich <jeromefroelich@hotmail.com>"]
description = "A minimal implementation of consistent hashing"
homepage = "https://github.com/jeromefroe/hashring-rs"
repository = "https://github.com/jeromefroe/hashring-rs.git"
documentation = "https://docs.rs/hashring/"
readme = "README.md"
license = "MIT"
keywords = ["consistent", "hashing", "hash", "ring"]
edition = "2021"

[features]
nightly = []

[dependencies]
serde = { version = "1", features = ["derive"] }
siphasher = "0.3"
thiserror = "1.0"
